# turls

./: .gitignore  Cargo.toml  README.md  Rocket.toml  TODO.md
src/lib/: lib.rs
src/lib/db/: config.rs  db.rs  mod.rs
src/lib/model/: mod.rs  model.rs  predicates.rs
