[package]
edition = "2018"
name = "turls"
version = "0.1.0"
authors = ["Trever Shick <trever.shick@tanium.com>"]

[lib]
name = "lib_turls"
path = "src/lib/lib.rs"

[[bin]]
name = "turls"
path = "src/bin/app.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
predicates = "2.0.3"
rocket = { version ="0.5.0-rc.1", features=["json"]}
serde = "1.0.130"
serde_json = "1.0.67"
sled = "0.34.7"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
yansi = "0.5.0"
zerocopy = "0.6.0"
